<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimerSectionFragment">

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="60sp"
        tools:text="00:00:00" />

    <Button
        android:id="@+id/stop_alarm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/timer_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Stop Alarm"
        android:visibility="gone"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/cluster_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Start" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reset" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cluster_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/add_5_sec_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add 5 sec" />

        <Button
            android:id="@+id/add_default_preset_0_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add 1 min" />

        <Button
            android:id="@+id/add_default_preset_1_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add 5 min" />

        <Button
            android:id="@+id/add_default_preset_2_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add 10 min" />
    </LinearLayout>

</RelativeLayout>
